Update 'jk59sn37q-python' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-f4be887da2.s0qp.p3.openshiftapps.com/rhtap/rhtap-qe:a0cd3500d0f5a71583054e97e09b8a18f0f4acd6@sha256:6d7bd3e916053e7291b887930bc0af0a21938fc59b4110449d43a979fab02780

--- a/components/jk59sn37q-python/overlays/development/deployment-patch.yaml
+++ b/components/jk59sn37q-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: jk59sn37q-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-f4be887da2.s0qp.p3.openshiftapps.com/rhtap/rhtap-qe:a0cd3500d0f5a71583054e97e09b8a18f0f4acd6@sha256:6d7bd3e916053e7291b887930bc0af0a21938fc59b4110449d43a979fab02780
+          name: container-image
